[wheel]
universal = 1

[metadata]
name = jupyter-spy
author = Vidar T. Fauske
author-email = vidartf@gmail.com
summary = Log Jupyter messages
description-file = README.md
home-page = https://github.com/vidartf/jupyter-spy
license = BSD-3-Clause
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    jupyter_spy
